# storage/api-docs/api-docs.json
@@ -1,74 +1,91 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Open Project API",
+        "title": "\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430\u0446\u0456\u044f \u0434\u043b\u044f API \u043f\u0440\u043e\u0435\u043a\u0442\u0443",
+        "description": "REST API \u043f\u0440\u043e\u0435\u043a\u0442\u0443 \u044f\u0432\u043b\u044f\u0454 \u0441\u043e\u0431\u043e\u044e \u043d\u0430\u0431\u0456\u0440 \u043c\u0435\u0442\u043e\u0434\u0456\u0432, \u0437\u0430 \u0434\u043e\u043f\u043e\u043c\u043e\u0433\u043e\u044e \u044f\u043a\u0438\u0445 \u0437\u0434\u0456\u0439\u0441\u043d\u044e\u044e\u0442\u044c\u0441\u044f \u0437\u0430\u043f\u0438\u0442\u0438 \u0456 \u043f\u043e\u0432\u0435\u0440\u0442\u0430\u044e\u0442\u044c\u0441\u044f \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456 \u0434\u043b\u044f \u043a\u043e\u0436\u043d\u043e\u0457 \u043e\u043f\u0435\u0440\u0430\u0446\u0456\u0457. \u0412\u0441\u0456 \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456 \u043f\u0440\u0438\u0445\u043e\u0434\u044f\u0442\u044c \u0443 \u0432\u0438\u0433\u043b\u044f\u0434\u0456 JSON \u0441\u0442\u0440\u0443\u043a\u0442\u0443\u0440. \u041f\u0440\u0438 \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0456 \u0431\u0443\u0434\u044c-\u044f\u043a\u0438\u0445 \u0434\u0430\u043d\u0438\u0445 \u0432 \u0446\u044c\u043e\u043c\u0443 API \u0432\u0430\u043c \u0441\u043b\u0456\u0434 \u0432\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0438 \u0434\u0432\u0430 \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u0438, \u043d\u0430\u0432\u0435\u0434\u0435\u043d\u0456 \u043d\u0438\u0436\u0447\u0435:\n *  Content-Type: application/json\n *  X-Requested-With: XMLHttpRequest",
         "contact": {
             "name": "Developers",
             "url": "https://www.google.com"
         },
         "version": "1.0"
     },
-    "host": "openproject.local",
-    "basePath": "",
+    "host": "toecyd.local",
+    "basePath": "/api/v1",
+    "schemes": [
+        "http"
+    ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "paths": {
-        "/api/dashboard": {
-            "get": {
-                "tags": [
-                    "\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f"
-                ],
-                "summary": "Display a listing of the resource.",
-                "description": "\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u043d\u043e\u0432\u043e\u0433\u043e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430.",
-                "operationId": "api.dashboard.index",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Dashboard overview."
-                    },
-                    "401": {
-                        "description": "Unauthorized action."
-                    }
-                }
-            },
+        "/signup": {
             "post": {
                 "tags": [
-                    "\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f"
+                    "\u0410\u0443\u0442\u0435\u043d\u0442\u0438\u0444\u0456\u043a\u0430\u0446\u0456\u044f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430"
                 ],
-                "summary": "\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u0438 \u043d\u043e\u0432\u0438\u0439 \u0435\u043a\u0437\u0435\u043c\u043f\u043b\u044f\u0440 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u043f\u0456\u0441\u043b\u044f \u0432\u0430\u043b\u0456\u0434\u043d\u043e\u0457 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457.",
-                "description": "\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u043d\u043e\u0432\u043e\u0433\u043e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430.",
+                "summary": "\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f",
+                "description": "\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u043d\u043e\u0432\u043e\u0433\u043e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
                 "operationId": "api.dashboard.index",
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "name": "\u0414\u0430\u043d\u0456 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
+                        "in": "body",
+                        "description": "\u0429\u043e\u0431 \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u043d\u043e\u0432\u043e\u0433\u043e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0456, \u043f\u043e\u0442\u0440\u0456\u0431\u043d\u043e \u043d\u0430\u0434\u0456\u0441\u043b\u0430\u0442\u0438 \u0439\u043e\u0433\u043e \u0456\u043c'\u044f, email \u0456 \u043f\u0430\u0440\u043e\u043b\u044c. \u041f\u0438\u0442\u0430\u043d\u043d\u044f \u043f\u0440\u043e \u043f\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043d\u043d\u044f \u043f\u0430\u0440\u043e\u043b\u044e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0435\u043c \u0437\u0430\u043b\u0438\u0448\u0430\u0454\u0442\u044c\u0441\u044f \u043d\u0430 \u0412\u0430\u0448\u0456\u0439 \u0441\u0442\u043e\u0440\u043e\u043d\u0456.\n  *   \u0406\u043c'\u044f \u043f\u043e\u0432\u0438\u043d\u043d\u043e \u0441\u043a\u043b\u0430\u0434\u0430\u0442\u0438\u0441\u044f \u0432\u0456\u0434 3 \u0434\u043e 255 \u0441\u0438\u043c\u0432\u043e\u043b\u0456\u0432\n  *  email \u0456\u0441\u043d\u0443\u044e\u0447\u0438\u0439, \u0432\u0430\u043b\u0456\u0434\u043d\u0438\u0439, \u0443\u043d\u0456\u043a\u0430\u043b\u044c\u043d\u0438\u0439 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0456\n  *  \u041f\u0430\u0440\u043e\u043b\u044c \u043f\u043e\u0432\u0438\u043d\u0435\u043d \u0431\u0443\u0442\u0438 \u0432\u0456\u0434 6 \u0434\u043e 32 \u0441\u0438\u043c\u0432\u043e\u043b\u0456\u0432",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "name": {
+                                    "description": "\u0406\u043c'\u044f \u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
+                                    "type": "string",
+                                    "example": "NameOfUser"
+                                },
+                                "email": {
+                                    "description": "email \u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
+                                    "type": "string",
+                                    "example": "example@gmail.com"
+                                },
+                                "password": {
+                                    "description": "\u041f\u0430\u0440\u043e\u043b\u044c \u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430",
+                                    "type": "string",
+                                    "example": "123456"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "Dashboard overview."
+                    "201": {
+                        "description": "\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447 \u0443\u0441\u043f\u0456\u0448\u043d\u043e \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u043e\u0432\u0430\u043d\u0438\u0439",
+                        "examples": {
+                            "application/json": {
+                                "message": "Successfully created user!"
+                            }
+                        }
                     },
-                    "401": {
-                        "description": "Unauthorized action."
+                    "422": {
+                        "description": "\u041f\u0435\u0440\u0435\u0434\u0430\u043d\u0456 \u043d\u0430 \u0432\u0430\u043b\u0456\u0434\u043d\u0456 \u0434\u0430\u043d\u0456, \u0430\u0431\u043e \u0457\u0445 \u043d\u0435 \u0434\u043e\u0441\u0442\u0430\u0442\u043d\u044c\u043e, \u0443 \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456 \u0431\u0443\u0434\u0435 \u0437\u0430\u0437\u043d\u0430\u0447\u0435\u043d\u043e \u0443 \u0447\u043e\u043c\u0443 \u043f\u0440\u0438\u0447\u0438\u043d\u0430",
+                        "examples": {
+                            "application/json": {
+                                "message": "The given data was invalid.",
+                                "errors": {
+                                    "email": "\u0414\u0430\u043d\u0438\u0439 email \u0432\u0436\u0435 \u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f."
+                                }
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "\u041c\u0435\u0442\u043e\u0434, \u0437 \u044f\u043a\u0438\u043c \u0432\u0438\u043a\u043e\u043d\u0443\u0432\u0430\u0432\u0441\u044f \u0437\u0430\u043f\u0438\u0442, \u043d\u0435 \u0434\u043e\u0437\u0432\u043e\u043b\u0435\u043d\u043e \u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0432\u0430\u0442\u0438 \u0434\u043b\u044f \u0437\u0430\u0434\u0430\u043d\u043e\u0433\u043e \u0440\u0435\u0441\u0443\u0440\u0441\u0443; \u043d\u0430\u043f\u0440\u0438\u043a\u043b\u0430\u0434, \u0437\u0430\u043f\u0438\u0442 \u0431\u0443\u0432 \u0437\u0434\u0456\u0439\u0441\u043d\u0435\u043d\u0438\u0439 \u0437\u0430 \u043c\u0435\u0442\u043e\u0434\u043e\u043c GET, \u0445\u043e\u0447\u0430 \u043e\u0447\u0456\u043a\u0443\u0454\u0442\u044c\u0441\u044f \u0449\u043e \u0434\u0430\u043d\u0456 \u0431\u0443\u0434\u0443\u0442\u044c \u043d\u0430\u0434\u0456\u0441\u043b\u0430\u043d\u0456 \u043c\u0435\u0442\u043e\u0434\u043e\u043c POST."
                     }
                 }
             }
         }
     },
-    "definitions": {
-        "Error": {
-            "required": [
-                "code",
-                "message"
-            ],
-            "properties": {
-                "code": {
-                    "description": "Class Controller",
-                    "type": "integer",
-                    "format": "int32"
-                },
-                "message": {
-                    "description": "Class Controller",
-                    "type": "string"
-                }
-            }
-        }
-    }
+    "definitions": {}
 }
